--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.5",
-    "angular": "^1.4.0"
+    "angular": "^1.4.0",
+    "angular-translate": "^2.15.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
